# everyday-scripts

./: .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .yamllint.yaml  BUILD  CHANGELOG.md  CLAUDE.md  Makefile  README.md  README.rst  WORKSPACE  everyday-scripts.code-workspace  input.txt  my_custom.bzl  photo_label.py  pyproject.toml  requirements.txt
.github/workflows/: pre-submit.yaml
archived/: ffmpeg-compile.sh
bazlearn/: BUILD.bazel
everyday_scripts/: analyze_emails.py  bcrypt_util.py  bind_mounts.py  bq_expire_partition.py  bq_expire_table.py  bq_size.py  filename_time_parse.py  gh_list_changed.py  imap_tools.py  imap_tools_test.py  manage_gcp_custom_metrics.py  mime.types  mmm.py  resolve.go  scriptlib.py  send_email.py  split_manifest.py  whatsapp_media_fix.py
home_bin/: convert_zen.sh  convert_zen_169.sh  dual_monitor.sh  dumpjwt.sh  flac2mp3.sh  git_init.sh  jwtdecode.sh  split_manifest.py  start_ssh_proxy.sh  to720p.sh  wifishared
laptop-shared-wifi/: README.rst  wifishared
laptop-shared-wifi/conf/: dhcpd.conf  hostapd.conf  iptables.sh
laptop-shared-wifi/conf/defaults/: README  hostapd  isc-dhcp-server
shell/: change-all-git-commits.sh  fetchmail.sh  imapbackup.sh  pg_backup.sh  puppet_test.sh  run_every.sh  to720p.sh  to_vimeo.sh  todvwide.sh  tomp4.sh
src/home_bin/: mmm.py  scriptlib.py  split_manifest.py
tests/: test_mmm.py
udev-rules/: 10-local.rules
