[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "everyday-scripts"
version = "0.1.0"
description = "Sandip's everyday personal scripts"
authors = ["Sandip Bhattacharya <sandipb@showmethesource.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "home_bin", from="./src"}]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
    "Topic :: Utilities",
]
repository = "https://github.com/sandipb/everyday-scripts"
keywords = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
colorama = "^0.4.5"
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mypy = "^0.971"

[tool.poetry.scripts]
split_manifest = 'home_bin.split_manifest:main'
