[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "everyday-scripts"
version = "0.0.4"
description = "Sandip's everyday personal scripts"
authors = ["Sandip Bhattacharya <sandipb@showmethesource.org>"]
license = "Apache-2.0"
readme = "README.md"
include = ["CHANGELOG.md", "everyday_scripts/mime.types"]
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.9',
    "Topic :: Utilities",
]
repository = "https://github.com/sandipb/everyday-scripts"
keywords = []

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
colorama = "^0.4.5"
PyYAML = "^6.0"
trio = "^0.21.0"
humanize = "^4.4.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pytest = "^7.1.3"
mypy = "^0.971"
types-requests = "^2.28.11"
trio-typing = "^0.7.0"
types-PyYAML = "^6.0.11"
types-colorama = "^0.4.15"

[tool.poetry.scripts]
split_manifest = 'everyday_scripts.split_manifest:main'
mmm = 'everyday_scripts.mmm:main'

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 120
target-version = ['py39']